Bug 1598717 - Wrap the "Firefox will save this password for this website" text. r=sfoster
Depends on D55741

Differential Revision: https://phabricator.services.mozilla.com/D55742

UltraBlame original commit: daf59b9083fb24d85cabe7c19f0a47d62b53cbb4

--- a/browser/themes/shared/autocomplete.inc.css
+++ b/browser/themes/shared/autocomplete.inc.css
@@ -90,10 +90,16 @@
 }
 
 
-#PopupAutoComplete > richlistbox > richlistitem[originaltype="generatedPassword"],
-#PopupAutoComplete > richlistbox > richlistitem[originaltype="loginWithOrigin"] {
+#PopupAutoComplete > richlistbox > richlistitem[originaltype="generatedPassword"] > .two-line-wrapper,
+#PopupAutoComplete > richlistbox > richlistitem[originaltype="loginWithOrigin"] > .two-line-wrapper {
   padding: 4px;
 }
+
+#PopupAutoComplete > richlistbox > richlistitem[originaltype="generatedPassword"] {
+  
+  display: block;
+}
+
 
 #PopupAutoComplete > richlistbox > richlistitem[originaltype="generatedPassword"] > .two-line-wrapper > .labels-wrapper > .line2-label {
   font-family: monospace;
@@ -102,6 +108,7 @@
 #PopupAutoComplete > richlistbox > richlistitem[originaltype="generatedPassword"] > .two-line-wrapper > .labels-wrapper > .generated-password-autosave {
   font-style: italic;
   font-size: 0.85em;
+  white-space: normal;
 }
 
 #PopupAutoComplete > richlistbox > richlistitem[originaltype="login"] + richlistitem[originaltype="generatedPassword"],
